# pvmppt-lab

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: public-release-manifest.json  release.md
docs/examples/: trina-module.yaml
examples/: README.md
src/pvmppt_lab/: __init__.py  animation.py  cli.py  converter.py  design.py  model_inventory.py  mppt.py  presets.py  pv.py  release.py  reporting.py  reproduction.py  scenarios.py
tests/: test_animation.py  test_cli.py  test_design.py  test_model_inventory.py  test_mppt.py  test_presets.py  test_pv.py  test_reproduction.py
